Implemented UnitOfWork in Controllers

--- a/MyBulky/MyBulky.csproj
+++ b/MyBulky/MyBulky.csproj
@@ -23,4 +23,9 @@
     <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bulky.DataAccess\Bulky.DataAccess.csproj" />
+    <ProjectReference Include="..\Bulky.Models\Bulky.Models.csproj" />
+  </ItemGroup>
+
 </Project>
